# SimpleITKPythonPackage

./: CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
