[build-system]
requires = ["scikit-build @ git+https://github.com/scikit-build/scikit-build.git@henryiii/fix/abspaths", "wheel", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-requires = "pytest numpy"
test-command = "pytest {project}/SimpleITK/Testing/Python"
skip = "*i686 *win32"

[tool.pytest.ini_options]
python_files = "*Test.py"